Add Two Numbers and Count Sorted Vowel Strings

--- a/testproject/testprojectcode/build.gradle
+++ b/testproject/testprojectcode/build.gradle
@@ -35,6 +35,6 @@ dependencies {
 }
 
 tasks.named('test') {
-    // Use JUnit Platform for unit tests.
-    useJUnitPlatform()
+    // Use JUnit for unit tests.
+    useJUnit()
 }
